service-client: More helpful error on agent rejection

https://bugs.freedesktop.org/show_bug.cgi?id=91237